--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,17 +21,11 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: django_app
-    restart: always
-    command: >
-      sh -c "./wait-for-it.sh db:5432 -- 
-         python manage.py migrate &&
-         python manage.py collectstatic --noinput &&
-         gunicorn backend_project.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - ./backend:/app
     environment:
       DJANGO_SETTINGS_MODULE: backend_project.settings
-      DATABASE_URL: postgres://user:admin123@db:5432/voiture_db
+      DATABASE_URL: postgres://user:admin123@localhost:5432/voiture_db
     depends_on:
       - db
     ports:
@@ -51,3 +45,7 @@ services:
 
 volumes:
   postgres_data:
+
+networks:
+  default:
+    driver: bridge
