--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,12 +20,18 @@ services:
     build: 
       context: ./backend
       dockerfile: Dockerfile
-    container_name: django_app
+    container_name: backend
+    #restart: always
+    command: >
+      sh -c "./wait-for-it.sh db:5432 -- 
+         python manage.py migrate &&
+         python manage.py collectstatic --noinput &&
+         python manage.py runserver 0.0.0.0:8000"
     volumes:
       - ./backend:/app
     environment:
       DJANGO_SETTINGS_MODULE: backend_project.settings
-      DATABASE_URL: postgres://user:admin123@localhost:5432/voiture_db
+      DATABASE_URL: postgres://user:admin123@db:5432/voiture_db
     depends_on:
       - db
     ports:
