--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.13.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^4.0.0",
     "vue": "^3.2.13",
