--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   # --- Base de données PostgreSQL ---
   db:
@@ -21,7 +19,6 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     container_name: backend
-    #restart: always
     command: >
       sh -c "./wait-for-it.sh db:5432 -- 
          python manage.py migrate &&
@@ -48,6 +45,10 @@ services:
       - "8080:80"
     depends_on:
       - backend
+    volumes:
+      - ./frontend:/app  
+      - /app/dist
+ #  LIGNE AJOUTÉE !
 
 volumes:
   postgres_data:
